fix(package): vertical alignment of the icon button of the providers fixed #117

--- a/src/module/components/providers/auth.providers.component.scss
+++ b/src/module/components/providers/auth.providers.component.scss
@@ -5,6 +5,9 @@ $github: #000000;
 
 :host {
   display: block;
+  .mat-icon {
+    vertical-align: inherit;
+  }
 }
 
 .space-full-xs {
